--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,19 @@
   text-align: center;
 }
 
+* {
+  box-sizing: border-box;
+}
+
+html, body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+
 body {
   font-family: "Playwrite CA", cursive;
   font-optical-sizing: auto;
