--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,4 @@
-#root {
-  max-height: 100vh;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
+
 
 * {
   box-sizing: border-box;
@@ -12,8 +7,9 @@
 html, body {
   margin: 0;
   padding: 0;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
+  text-align: center;
   overflow: hidden;
 }
 
@@ -41,6 +37,11 @@ h1 {
 
 h2 {
   text-decoration: underline;
+}
+
+.app-container {
+  width: 100vw;
+  height: 100vh;
 }
 
 .challenge-container {
