--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,6 @@ html, body {
   padding: 0;
   width: 100%;
   height: 100%;
-  overflow: hidden;
   text-align: center;
 }
 
@@ -46,11 +45,12 @@ h2 {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  padding: 20px;
 }
 
 .challenge-container {
   gap: 0.5rem; 
-  padding-bottom: 2.5vh;
+  padding-bottom: 1.5vh;
 }
 
 p {
