--- a/src/App.css
+++ b/src/App.css
@@ -42,7 +42,22 @@ body {
 .challenge-container {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   gap: 0.5rem; 
+ 
+}
+
+.upload-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  gap: 0.5rem;
+}
+
+input {
+  flex-direction: column;
 }
 
 h1 {
